# analise_companhias_cvm

./: .gitignore  README.md  app.py  main.py  prd.md  pyproject.toml
src/: dashboard_dre.py  database.py  ingestion.py  load.py  main.py  models.py  queries.sql  queries_bp.py  queries_dfc.py  queries_dre.py  schema.py  test.py  transformation.py  transformation_bp.py  transformation_dfc.py  transformation_dre.py  validator.py
src/utils/: components.py  formatters.py
